# framework.system.haptic-module-tizen

./: CMakeLists.txt  project.config
include/: haptic_file.h  haptic_module_log.h
packaging/: haptic-module-tizen.spec
test/: test.c
tizen/ARM/: CMakeLists.txt
tizen/ARM/src/: haptic_module_internal.c
tizen/DEVICE/: CMakeLists.txt
tizen/DEVICE/src/: file.c  haptic.c  haptic_module_file.c  haptic_module_internal.c
tizen/SIMULATOR/: CMakeLists.txt
tizen/SIMULATOR/src/: haptic.c  haptic_module_internal.c
tizen/x86/: CMakeLists.txt
tizen/x86/src/: haptic_module_internal.c
