CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(haptic-module C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(LIBDIR "\${prefix}/lib")
SET(INCLUDEDIR "\${prefix}/include/${PROJECT_NAME}")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")

MESSAGE ("architecture name : ${ARCH}")
MESSAGE ("SIMULATOR: ${SIMULATOR}")
IF("${SIMULATOR}" MATCHES "yes")
    SET(TIZEN_TARGET "SIMULATOR")
ELSEIF("${ARCH}" MATCHES "^arm.*")
	SET(TIZEN_TARGET "ARM")
ELSEIF("${ARCH}" MATCHES ".*86.*")
	SET(TIZEN_TARGET "x86")
ENDIF("${SIMULATOR}" MATCHES "yes")

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/tizen/${TIZEN_TARGET})
